create get function(futures create sort function and deploy)

--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,12 @@ functions:
     - http: 
         path: /post
         method: post
+  getAllPosts:
+    handler: handler.getAllPosts
+    events: 
+    - http: 
+        path: /posts
+        method: get
 
 resources:
   Resources:
