--- a/serverless.yml
+++ b/serverless.yml
@@ -6,50 +6,46 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs10.x
+  runtime: nodejs8.10
+  region: eu-west-2
   environment: ${self:custom.settings}
-  region: eu-central-1
-  iamRoleStatements: 
-    - Effect: "Allow"
-      Action: 
+  iamRoleStatements:
+   - Effect: "Allow"
+     Action:
         - dynamodb:DescribeTable
         - dynamodb:Scan
         - dynamodb:GetItem
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: 
-        - "arn:aws:dynamodb:${self:provider.region}:*:table/${self:custom.settings.POSTS_TABLE}"
+     Resource:
+      - "arn:aws:dynamodb:${self:provider.region}:*:table/${self:custom.settings.POSTS_TABLE}"
 
 functions:
   createPost:
     handler: handler.createPost
-    events: 
-    - http: 
+    events:
+    - http:
         path: /post
         method: post
-        cors: true
   getAllPosts:
     handler: handler.getAllPosts
-    events: 
-    - http: 
+    events:
+    - http:
         path: /posts
         method: get
-        cors: true
 
 resources:
   Resources:
     PostsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        AttributeDefinitions: 
-          - 
-            AttributeName: "id"
-            AttributeType: "S"
+        AttributeDefinitions:
+        - AttributeName: "id"
+          AttributeType: "S"
         KeySchema:
-          - 
-            AttributeName: "id"
-            KeyType: "HASH"
+        - AttributeName: "id"
+          KeyType: "HASH"
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
